force-app/main/default/objects/custom_create282__c/custom_create282__c.object-meta.xml
<CustomObject>
    <label>Custom created object282</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects282</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>