force-app/main/default/objects/custom_create282__c/fields/custom_create_282field731__c.field-meta.xml
<CustomField>
    <fullName>custom_create_282field731__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 282field731</label>
    <type>Checkbox</type>
</CustomField>